@@ -951,7 +951,7 @@ class EclipseFluidReadWriteTest extends neqsim.NeqSimTest {
     }
 
     // Clean up test file
-    java.nio.file.Files.deleteIfExists(java.nio.file.Path.of(outputFile));
+    java.nio.file.Files.deleteIfExists(java.nio.file.Paths.get(outputFile));
   }
 
   /**
@@ -984,5 +984,86 @@ class EclipseFluidReadWriteTest extends neqsim.NeqSimTest {
     Assertions.assertTrue(e300Content.contains("C1"), "Should contain C1 for methane");
     Assertions.assertTrue(e300Content.contains("80.00"), "Should contain reservoir temp 80°C");
   }
-}
 
+  /**
+   * Test LBCCOEF reading - verifies that LBC viscosity model is applied when LBCCOEF is present.
+   */
+  @Test
+  void testLBCCOEFReading() throws IOException {
+    // example.e300 contains LBCCOEF with values: 0.1084806 -0.0295031 0.1130421 -0.0553108
+    // 0.0093324
+    testSystem = EclipseFluidReadWrite.read(example);
+    testSystem.setPressure(100.0, "bara");
+    testSystem.setTemperature(50.0, "C");
+
+    // Initialize thermodynamic properties
+    ThermodynamicOperations testOps = new ThermodynamicOperations(testSystem);
+    testOps.TPflash();
+    testSystem.initPhysicalProperties();
+
+    // Verify LBC model is applied
+    Assertions.assertTrue(testSystem.getPhase(0).getPhysicalProperties().isLBCViscosityModel(),
+        "Gas phase should use LBC viscosity model");
+    Assertions.assertTrue(testSystem.getPhase(1).getPhysicalProperties().isLBCViscosityModel(),
+        "Oil phase should use LBC viscosity model");
+
+    // Verify LBC parameters are set correctly
+    double[] lbcParams = testSystem.getPhase(0).getPhysicalProperties().getLbcParameters();
+    Assertions.assertNotNull(lbcParams, "LBC parameters should not be null");
+    Assertions.assertEquals(5, lbcParams.length, "Should have 5 LBC parameters");
+    Assertions.assertEquals(0.1084806, lbcParams[0], 1e-6, "First LBC coefficient");
+    Assertions.assertEquals(-0.0295031, lbcParams[1], 1e-6, "Second LBC coefficient");
+
+    // Calculate viscosity and verify it's reasonable
+    double gasViscosity = testSystem.getPhase(0).getViscosity();
+    double oilViscosity = testSystem.getPhase(1).getViscosity();
+    Assertions.assertTrue(gasViscosity > 0 && gasViscosity < 1e-3,
+        "Gas viscosity should be positive and < 1e-3 Pa·s");
+    Assertions.assertTrue(oilViscosity > 0 && oilViscosity < 1,
+        "Oil viscosity should be positive and < 1 Pa·s");
+  }
+
+  /**
+   * Test LBCCOEF round-trip - write and read back with LBC model.
+   */
+  @Test
+  void testLBCCOEFRoundTrip() throws IOException {
+    // Create a fluid with LBC viscosity model
+    SystemInterface fluid = new neqsim.thermo.system.SystemSrkEos(373.15, 100.0);
+    fluid.addComponent("methane", 0.80);
+    fluid.addComponent("ethane", 0.10);
+    fluid.addComponent("propane", 0.05);
+    fluid.addComponent("n-butane", 0.05);
+    fluid.setMixingRule("classic");
+    fluid.init(0);
+
+    // Set LBC viscosity model with custom parameters
+    double[] customLbcParams = {0.1084806, -0.0295031, 0.1130421, -0.0553108, 0.0093324};
+    for (int phase = 0; phase < fluid.getMaxNumberOfPhases(); phase++) {
+      fluid.getPhase(phase).getPhysicalProperties().setViscosityModel("LBC");
+      fluid.getPhase(phase).getPhysicalProperties().setLbcParameters(customLbcParams);
+    }
+
+    // Write to file
+    String outputFile = file.getAbsolutePath() + "/lbc_test.e300";
+    EclipseFluidReadWrite.write(fluid, outputFile, 100.0);
+
+    // Read back
+    SystemInterface importedFluid = EclipseFluidReadWrite.read(outputFile);
+
+    // Verify LBC model is applied
+    Assertions.assertTrue(importedFluid.getPhase(0).getPhysicalProperties().isLBCViscosityModel(),
+        "Imported fluid should use LBC viscosity model");
+
+    // Verify LBC parameters match
+    double[] importedParams = importedFluid.getPhase(0).getPhysicalProperties().getLbcParameters();
+    Assertions.assertNotNull(importedParams, "Imported LBC parameters should not be null");
+    for (int i = 0; i < 5; i++) {
+      Assertions.assertEquals(customLbcParams[i], importedParams[i], 1e-5,
+          "LBC parameter " + i + " should match");
+    }
+
+    // Clean up test file
+    java.nio.file.Files.deleteIfExists(java.nio.file.Paths.get(outputFile));
+  }
+}
